objects/SMAX_PS_Geography__c.object
<CustomObject>
    <description>Table to hold Zip cluster , Sub District, and an MPG</description>
    <label>Geography</label>
    <nameField>
        <label>Geography Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Geographies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>SMAX_PS_3_Digit_Zip__c</fullName>
        <description>Holds the Three Digit ZipCode</description>
        <label>Three Digit Zip</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Cost_Center__c</fullName>
        <label>Cost Center</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_LocationCode__c</fullName>
        <externalId>true</externalId>
        <label>Location Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Geography_Description__c</fullName>
        <description>Denotes the geography description</description>
        <inlineHelpText>Denotes the geography description</inlineHelpText>
        <label>Geography Description</label>
        <type>TextArea</type>
    </fields>
</CustomObject>